<resources>
    <string name="app_name">Hantek6000</string>

    <!--Common Dialog-->
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_ok">OK</string>

    <!--Enter Demo Dialog: notify user demo mode entered-->
    <string name="enter_demo_dialog_title">No Device Found</string>
    <string name="enter_demo_dialog_message">Demo mode is now running.</string>
    <string name="usb_permission_not_granted">Usb permission not granted.</string>

    <!--StatusBar-->
    <string name="run_button_title">RUN</string>
    <string name="auto_button_title">AUTO</string>
    <string name="menu_button_title">MENU</string>
    <!--Note: Don't trigger_status_title-->
    <string name="trigger_status_title">T</string>

    <!--Autoset dialog-->
    <string name="autoset_wait">Autoset is in progress, please wait.</string>

    <!--Coupling-->
    <string name="coupling_ac">AC</string>
    <string name="coupling_dc">DC</string>
    <string name="coupling_gnd">GND</string>

    <!--Attenuation Factor-->
    <!--Note: Don't translate Attenuation Factor-->
    <string name="probe_x1">X1</string>
    <string name="probe_x10">X10</string>
    <string name="probe_x100">X100</string>
    <string name="probe_x1000">X1000</string>
    <string name="probe_x10000">X10000</string>
    <string name="probe_x20">X20</string>
    <string name="probe_x10a_cc65">X10A_CC65</string>
    <string name="probe_x100a_cc65">X100A_CC65</string>
    <string name="probe_x100a_cc650">X100A_CC650</string>
    <string name="probe_x1000a_cc650">X1000A_CC650</string>
    <string name="probe_100a_cc1100">X100A_CC1100</string>
    <string name="probe_1000a_cc1100">X1000A_CC1100</string>

    <!--Analog channels-->
    <string name="ch1">CH1</string>
    <string name="ch2">CH2</string>
    <string name="ch3">CH3</string>
    <string name="ch4">CH4</string>

    <!--trigger slope-->
    <string name="trigger_slope_rising">Rising</string>
    <string name="trigger_slope_falling">Falling</string>
    <string name="largest_volts_div">The current volts/div is already the largest.</string>
    <!--trigger sweep-->
    <string name="trigger_sweep_auto">Auto</string>
    <string name="trigger_sweep_normal">Normal</string>
    <string name="trigger_sweep_single">Single</string>

    <string name="smallest_volts_div">The current volts/div is already the smallest.</string>
    <string name="largest_timebase">The current timebase is already the largest.</string>
    <string name="smallest_timebase">The current timebase is already the smallest.</string>

    <!--Other-->
    <string name="title_activity_main_menu">Hantek6000</string>

    <!--Factory setup-->
    <string name="factory_setup_tip">This will restore all app setups to factory defaults. Continue?</string>
    <string name="factory_setup_yes">Yes</string>
    <string name="factory_setup_no">No</string>

    <!--Self calibration dialog-->
    <string name="self_cali_tip">It is strongly recommended to perform self-calibration after 30 minutes of power-on of the device.\nYou cannot input any signal on any channel during the self-calibration period.\nDo you want to perform self-calibration?</string>
    <string name="self_cali_yes">Yes</string>
    <string name="self_cali_no">No</string>
    <string name="self_cali_real_device">Self-calibration can only be performed  after connecting the real device.</string>
    <string name="self_cali_performing">Self-calibration is in progress… Please wait</string>
    <string name="self_cali_stop">Stop</string>
    <string name="cursor_delta_v">ΔV:</string>
    <string name="cursor_delta_time">ΔT:</string>
    <string name="cursor_freq">F:</string>

    <!--Save channel data dialog-->
    <string name="save_data_dialog_channel_choose">Select the channel to save</string>
    <string name="save_data_fail">Save data FAILED.</string>
    <string name="save_data_ok">File stored at: </string>

    <!--Load channel data dialog-->
    <string name="load_data_dialog_select_file">Select the file to open</string>

    <!--Dialog-->
    <string name="dialog_yes_button">OK</string>
    <string name="dialog_no_button">Cancel</string>

    <!-- About Menu -->
    <string name="about_menu_app">APP</string>
    <string name="about_menu_fpga">FPGA</string>
    <string name="about_menu_driver">Driver</string>
    <string name="about_menu_sn">Product SN</string>

    <!-- Tools Menu -->
    <string name="tools_menu_ref_button_title">REF</string>
    <string name="tools_menu_math_button_title">MATH</string>

    <!-- REF dialog -->
    <string name="ref_dialog_voltage_per_grid_text">Volts / DIV</string>
    <string name="ref_dialog_second_per_grid_text">Time / DIV</string>
    <string name="ref_dialog_on_off_button_title">Open/Close</string>
    <string name="ref_dialog_load_button_title">Load</string>
    <string name="ref_dialog_save_button_title">Save</string>
    <string name="ref_dialog_close_button_title">Close</string>

    <!-- Channel selection dialog -->
    <string name="channel_selection_dialog_title">Channel Selection</string>

    <!-- Math channel dialog -->
    <string name="math_dialog_source_a_text">Source A</string>
    <string name="math_dialog_source_b_text">Source B</string>
    <string name="math_dialog_voltage_per_grid_text">Volts / DIV</string>
    <string name="math_dialog_operation_text">Operator</string>
    <string name="math_dialog_on_off_button_title">Open/Close</string>
</resources>
