<?xml version="1.0" encoding="utf-8"?>
<!--Probe(Attenuation Factor) settings PopupWindow layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPopup">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/probe_layout_x1"
        android:text="@string/probe_x1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/probe_layout_x10"
        android:text="@string/probe_x10"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/probe_layout_x100"
        android:text="@string/probe_x100"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/probe_layout_x1000"
        android:text="@string/probe_x1000"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/probe_layout_x10000"
        android:text="@string/probe_x10000"/>

</LinearLayout>