<?xml version="1.0" encoding="utf-8"?>
<!--channel coupling settings PopupWindow layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPopup">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coupling_layout_ac"
        android:text="@string/coupling_ac"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coupling_layout_dc"
        android:text="@string/coupling_dc"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coupling_layout_gnd"
        android:text="@string/coupling_gnd"/>

</LinearLayout>
