<?xml version="1.0" encoding="utf-8"?>
<!--trigger quick settings PopupWindow layout-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPopup"
        android:id="@+id/trigger_quick_settings_source_button_wrapper">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_source_button"
            android:text="@string/ch1"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPopup"
        android:id="@+id/trigger_quick_settings_slope_button_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trigger_quick_settings_source_button_wrapper">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_slope_button"
            android:text="@string/trigger_slope_rising" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trigger_quick_settings_source_layout"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/colorPopup"
        app:layout_constraintStart_toStartOf="@id/trigger_quick_settings_source_button_wrapper"
        app:layout_constraintEnd_toEndOf="@id/trigger_quick_settings_source_button_wrapper"
        app:layout_constraintTop_toBottomOf="@id/trigger_quick_settings_source_button_wrapper">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_source_ch1"
            android:text="@string/ch1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_source_ch2"
            android:text="@string/ch2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_source_ch3"
            android:text="@string/ch3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_source_ch4"
            android:text="@string/ch4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/trigger_quick_settings_slope_layout"
        android:visibility="gone"
        android:background="@color/colorPopup"
        app:layout_constraintStart_toStartOf="@id/trigger_quick_settings_slope_button_wrapper"
        app:layout_constraintEnd_toEndOf="@id/trigger_quick_settings_slope_button_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/trigger_quick_settings_slope_button_wrapper">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_slope_rising"
            android:text="@string/trigger_slope_rising"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigger_quick_settings_slope_falling"
            android:text="@string/trigger_slope_falling"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
