<?xml version="1.0" encoding="utf-8"?>

<!--About menu layout-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.menus.about.AboutMenuFragment">

    <!--APP Version-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_menu_app"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_menu_app_version_text_view"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--FPGA firmware version-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_menu_fpga"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/about_menu_app_version_text_view"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_menu_fpga_version_text_view"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_menu_app_version_text_view" />

    <!--Driver firmware version-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_menu_driver"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/about_menu_fpga_version_text_view"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_menu_driver_version_text_view"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_menu_fpga_version_text_view" />

    <!--Product SN-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_menu_sn"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/about_menu_driver_version_text_view"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_menu_sn_text_view"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_menu_driver_version_text_view" />

</android.support.constraint.ConstraintLayout>