<?xml version="1.0" encoding="utf-8"?>

<!--顶部状态栏布局-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#0A0B0B">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorCha"
        android:id="@+id/ch1ToggleButton"
        android:textAllCaps="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorChb"
        android:id="@+id/ch2ToggleButton"
        android:textAllCaps="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorChc"
        android:id="@+id/ch3ToggleButton"
        android:textAllCaps="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorChd"
        android:id="@+id/ch4ToggleButton"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#AAAAAA"
        android:textSize="@dimen/statusBarTextSize"
        android:gravity="center"
        android:text="TB "
        android:id="@+id/timebasePrefix"
        android:layout_marginStart="8dp"
        tools:ignore="HardcodedText" />

    <!--Set background to transparent so no show the drop down arrow when clicked.-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/statusBarTimeBase"
        android:background="@android:color/transparent"
        android:entries="@array/timebase_string_array" />

    <!--Add empty View to let element align to right-->
    <View android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="32dp"
        android:layout_height="match_parent"
        android:id="@+id/triggerStatusTextView"
        android:textColor="#AAAAAA"
        android:text="@string/trigger_status_title"
        android:textSize="@dimen/statusBarTextSize"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/runButton"
        android:textOn="@string/run_button_title"
        android:textOff="@string/run_button_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoButton"
        android:textStyle="bold"
        android:text="@string/auto_button_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menuButton"
        android:textStyle="bold"
        android:text="@string/menu_button_title" />

</LinearLayout>